flask-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: flask-pod
  labels:
    app: flask-app
spec:
  containers:
  - image: manojkmhub/flaskapp:latest
    name: flask-container
    ports:
    - containerPort: 4080
