storage-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: storage-hosttype
spec:
  containers:
  - image: ashok25/flaskapp:v1.0
    name: flask-app
    volumeMounts:
    - mountPath: /pod-data
      name: data-vol
  volumes:
  - name: data-vol
    hostPath:
      # directory location on host
      path: /data
      # this field is optional
      type: Directory
