flask-svc-endpoints.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: flask-svc
subsets:
  - addresses:
      - ip: 192.168.0.195
      - ip: 192.168.0.198
    ports:
      - port: 4080
