flask-svc-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-headless
  labels:
    app: nginx-app
spec:
  ports:
  - port: 80
    name: web-port
  clusterIP: None
  selector:
    app: flask-app
---
