flask-svc-ingress-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc-ingress-v2
spec:
  selector:
    app: flask-app-v2
  ports:
    - protocol: TCP
      port: 4080
      targetPort: 4080
