flask-svc-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc-ingress
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 4080
      targetPort: 4080
