flask-svc-no-selector.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4080
