flask-svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  selector:
    app: flask-app
  ports:
  - name: service-ports
    protocol: TCP
    port: 31080
    targetPort: 4080
    nodePort: 32666
  type: NodePort
