flask-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4080
