flask-ingress-fanout.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress-fanout
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: flask.app.com
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: flask-svc-ingress
            port:
              number: 4080
  - host: flask.app.com
    http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: flask-svc-ingress-v2
            port:
              number: 4080
